Add ability to stop job receiving applications
